--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "openai": "^4.32.1",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "dotenv": "^16.4.5",
